# kinematic-tracker-docs

./: .gitignore  Gemfile  LICENSE  README.md  _config.yml  _toc.yml  best-practice.md  gentle-intro.md  getting-started.md  index.md  installation.md  myst.yml  pyproject.toml  quick-intro.md  quick-look-around.md
_includes/: head_custom.html
dev/: README.md
examples/: ex001_start.ipynb
notebooks/: intro.ipynb
src/kinematic_tracker_docs/: __init__.py
