[project]
name = "kinematic-tracker-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Peter Koval", email = "pkoval@vicomtech.org" }
]
requires-python = ">=3.14.2"
dependencies = [
    "jupyter-book>=2.1.0",
    "jupyterlab>=4.5.1",
    "kinematic-tracker>=16.1.0",
]

[project.scripts]
kinematic-tracker-docs = "kinematic_tracker_docs:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
